--- a/Memories/appsettings.json
+++ b/Memories/appsettings.json
@@ -1,4 +1,6 @@
 ﻿{
+  "ConnectionStrings": { "DefaultConnection": "Server=tcp:clickjaw.database.windows.net,1433;Initial Catalog=Memories_FinalProject;Persist Security Info=False;User ID=clickjaw;Password=Doit4him!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" },
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
