--- a/Memories/appsettings.json
+++ b/Memories/appsettings.json
@@ -1,12 +1,19 @@
 ﻿{
   "ConnectionStrings": { "DefaultConnection": "Server=tcp:clickjaw.database.windows.net,1433;Initial Catalog=MemoriesDB;Persist Security Info=False;User ID=clickjaw;Password=Doit4him!;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;" },
 
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+  "CloudinarySettings": {
+    "CloudName": "df06oqpqg",
+    "ApiKey": "343818543965186",
+    "ApiSecret": "gIBGc9gckOSMGMRpmgnOI0mYZZQ"
+
   },
-  "AllowedHosts": "*"
-}
+
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
 
