--- a/Memories/Memories.csproj
+++ b/Memories/Memories.csproj
@@ -27,6 +27,7 @@
     <None Remove="Microsoft.AspNetCore.Identity" />
     <None Remove="Microsoft.Extensions.Identity.Core" />
     <None Remove="Microsoft.AspNetCore.Identity.EntityFrameworkCore" />
+    <None Remove="Views\Dashboard\" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Data\" />
@@ -42,6 +43,7 @@
     <Folder Include="wwwroot\Media\Pictures\" />
     <Folder Include="Validation\" />
     <Folder Include="Views\Account\" />
+    <Folder Include="Views\Dashboard\" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.12" />
